--- a/server/courses/el/eisagwgh-sth-dhmosiografia-dedomenwn/sygkrish-arithmwn.html
+++ b/server/courses/el/eisagwgh-sth-dhmosiografia-dedomenwn/sygkrish-arithmwn.html
@@ -44,7 +44,7 @@ tabs:
       data-test="return workflow.tabs[0].stepModuleIds[1] === 'formula'"
       >Προσθέστε τον <kbd>Τύπο</kbd></li>
     <li
-      data-test="const wfm = workflow.tabs[0].steps[1]; if (!wfm || wfm.moduleSlug !== 'formula' || wfm.params.syntax !== 'excel' || !wfm.params.all_rows) return false; const f = wfm.params.formula_excel.replace(/ /g, ''); return f === '=D1-C1' || f === '=(D1-C1)'"
+      data-test="const step = workflow.tabs[0].steps[1]; if (!step || step.moduleSlug !== 'formula' || step.params.syntax !== 'excel' || !step.params.all_rows) return false; const f = step.params.formula_excel.replace(/ /g, ''); return f === '=D1-C1' || f === '=(D1-C1)'"
       >Πληκτρολογήστε τον ακόλουθο τύπο:<div class="copy-txt">=D1-C1</div>
     </li>
     <li
@@ -52,7 +52,7 @@ tabs:
       >Ονομάστε τη νέα στήλη <kbd>Difference</kbd> (Διαφορά).<p class="instruction-detail">Ένας θετικός αριθμός σημαίνει ότι ο πληθυσμός αυξήθηκε, ενώ ένας αρνητικός αριθμός σημαίνει ότι ο πληθυσμός της κομητείας μειώθηκε.</p>
     </li>
     <li
-      data-test="const wfm = workflow.tabs[0].steps[2]; if (!wfm || wfm.moduleSlug !== 'sort') return false; const p = wfm.params; return p.keep_top === '' && p.sort_columns[0] && p.sort_columns[0].colname === 'Difference' && p.sort_columns[0].is_ascending"
+      data-test="const step = workflow.tabs[0].steps[2]; if (!step || step.moduleSlug !== 'sort') return false; const p = step.params; return p.keep_top === '' && p.sort_columns[0] && p.sort_columns[0].colname === 'Difference' && p.sort_columns[0].is_ascending"
       >Ταξινομήστε τη στήλη <kbd>Difference</kbd> σε αύξουσα σειρά.<p class="instruction-detail">Η πρώτη σειρά εμφανίζει τον μεγαλύτερο αρνητικό αριθμό, δηλαδή την κομητεία με τη μεγαλύτερη μείωση πληθυσμού.</p>
     </li>
   </ol>
@@ -67,14 +67,14 @@ tabs:
   <h3 class="instructions">Οδηγίες</h3>
   <ol class="steps">
     <li
-      data-test="const wfm = workflow.tabs[0].steps[3]; if (!wfm || wfm.moduleSlug !== 'formula' || wfm.params.syntax !== 'excel' || !wfm.params.all_rows) return false; const f = wfm.params.formula_excel.replace(/ /g, ''); return f === '=D1/C1' || f === '=(D1/C1)'"
+      data-test="const step = workflow.tabs[0].steps[3]; if (!step || step.moduleSlug !== 'formula' || step.params.syntax !== 'excel' || !step.params.all_rows) return false; const f = step.params.formula_excel.replace(/ /g, ''); return f === '=D1/C1' || f === '=(D1/C1)'"
       >Προσθέστε έναν νέο Τύπο ως βήμα 4 (κρατήστε τον προηγούμενο) και πληκτρολογήστε:<div class="copy-txt">=D1/C1</div>
     </li>
     <li
       data-test="return workflow.tabs[0].steps[3].params.out_column === 'Ratio'"
       >Ονομάστε τη νέα στήλη <kbd>Ratio</kbd> (Λόγος)</li>
     <li
-      data-test="const wfm = workflow.tabs[0].steps[4]; if (!wfm || wfm.moduleSlug !== 'sort') return false; const p = wfm.params; return p.keep_top === '' && p.sort_columns[0] && p.sort_columns[0].colname === 'Ratio' && p.sort_columns[0].is_ascending"
+      data-test="const step = workflow.tabs[0].steps[4]; if (!step || step.moduleSlug !== 'sort') return false; const p = step.params; return p.keep_top === '' && p.sort_columns[0] && p.sort_columns[0].colname === 'Ratio' && p.sort_columns[0].is_ascending"
       >Ταξινομήστε τη στήλη <kbd>Ratio</kbd> σε αύξουσα σειρά.<p class=instruction-detail>Αν ο λόγος ισούται με 1, αυτό σημαίνει ότι για κάθε κάτοικο το 2010 υπάρχει ένας κάτοικος το 2017.</p>
       <p class=instruction-detail>Οι αριθμοί που είναι μεγαλύτεροι από το 1 σημαίνουν ότι ο πληθυσμός αυξήθηκε. Αν είναι μικρότεροι από 1, ο πληθυσμός μειώθηκε. Αν ο λόγος ισούται με 2, αυτό σημαίνει ότι ο πληθυσμός διπλασιάστηκε, ενώ το 0,5 σημαίνει ότι μειώθηκε κατά το ήμισυ.</p>
     </li>
@@ -87,7 +87,7 @@ tabs:
   <h3 class="instructions">Οδηγίες</h3>
   <ol class="steps">
     <li
-      data-test="const wfm = workflow.tabs[0].steps[5]; if (!wfm || wfm.moduleSlug !== 'formula' || wfm.params.syntax !== 'excel' || !wfm.params.all_rows) return false; const f = wfm.params.formula_excel.replace(/ /g, ''); return f === '=D1/C1*100' || f === '=(D1/C1)*100' || f === '=F1*100'"
+      data-test="const step = workflow.tabs[0].steps[5]; if (!step || step.moduleSlug !== 'formula' || step.params.syntax !== 'excel' || !step.params.all_rows) return false; const f = step.params.formula_excel.replace(/ /g, ''); return f === '=D1/C1*100' || f === '=(D1/C1)*100' || f === '=F1*100'"
       >Προσθέστε άλλον έναν Τύπο και πληκτρολογήστε:<div class="copy-txt">=(D1/C1)*100</div>
     </li>
     <li
@@ -105,7 +105,7 @@ tabs:
   <h3 class="instructions">Οδηγίες</h3>
   <ol class="steps">
     <li
-      data-test="const wfm = workflow.tabs[0].steps[6]; if (!wfm || wfm.moduleSlug !== 'formula' || wfm.params.syntax !== 'excel' || !wfm.params.all_rows) return false; const f = wfm.params.formula_excel.replace(/ /g, ''); return f === '=((D1-C1)/C1)*100' || f === '=(D1-C1)/C1*100' || f === '=(E1-C1)*100' || f === '=((D1/C1)-1)*100' || f === '=(D1/C1*100)-100' || f === '=D1/C1*100-100' || f === '=(F1-1)*100' || f === '=G1-100' || f === '(G1-100)'"
+      data-test="const step = workflow.tabs[0].steps[6]; if (!step || step.moduleSlug !== 'formula' || step.params.syntax !== 'excel' || !step.params.all_rows) return false; const f = step.params.formula_excel.replace(/ /g, ''); return f === '=((D1-C1)/C1)*100' || f === '=(D1-C1)/C1*100' || f === '=(E1-C1)*100' || f === '=((D1/C1)-1)*100' || f === '=(D1/C1*100)-100' || f === '=D1/C1*100-100' || f === '=(F1-1)*100' || f === '=G1-100' || f === '(G1-100)'"
       >Προσθέστε άλλο ένα βήμα με Τύπο και αυτή τη φορά εφαρμόστε τον τύπο ποσοστιαίας μεταβολής:<div class="copy-txt">=((D1 - C1) / C1) * 100</div>
     </li>
     <li
